fix photos section overflow

--- a/src/components/ui/PhotosSection/PhotosSection.module.css
+++ b/src/components/ui/PhotosSection/PhotosSection.module.css
@@ -82,6 +82,11 @@
 }
 
 @media (max-width: 600px) {
+  .photosWrapSection {
+    min-width: 100vw;
+    overflow: hidden;
+  }
+
   .photosDesc {
     font-size: 20px;
     width: 250px;
