--- a/src/components/ui/PlaceOfWeddingInfo/PlaceOfWedding.module.css
+++ b/src/components/ui/PlaceOfWeddingInfo/PlaceOfWedding.module.css
@@ -1,5 +1,5 @@
 .venueSection{
-max-width: 90vw;
+max-width: 100vw;
 overflow-x: hidden;
 }
 .placeOfWeddingSection,
